# beancount-language-server

./: Cargo.toml  testing.beancount
crates/beancount-formatter/: Cargo.toml
crates/beancount-formatter/src/: lib.rs  tests.rs
crates/lsp/src/: capabilities.rs  handlers.rs  providers.rs  server.rs  treesitter_utils.rs  utils.rs
crates/lsp/src/providers/: code_actions.rs  goto_definition.rs  references.rs  text_document.rs
