[package]
name = "beancount-formatter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "beancount-sort"
path = "src/bin/beancount_sort.rs"

[dependencies]
tree-sitter-beancount = "2.5"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
insta.workspace = true
